fix minor issues on small screens

--- a/src/styles/_contacts.scss
+++ b/src/styles/_contacts.scss
@@ -40,7 +40,7 @@
       flex-basis: 50%;
       justify-content: space-around;
     }
-    
+
     &__info {
       width: 50%;
     }
@@ -54,7 +54,9 @@
       flex-basis: 40%;
       justify-content: flex-start;
       flex-direction: column;
-      align-items: center;
+    }
+    &__info {
+      width: 75%;
     }
   }
 
