--- a/src/styles/_employee.scss
+++ b/src/styles/_employee.scss
@@ -1,5 +1,6 @@
 .employee {
   width: 19vw;
+  min-width: 200px;
   max-width: 300px;
   display: flex;
   flex-direction: column;
